--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 joblib==1.3.2
 MarkupSafe==2.1.5
+python==3.8.0
 numpy==1.21.5
 packaging==24.0
 pickle-mixin==1.0.2
